--- a/volpe-accademy-main/volpe/frontend-development.html
+++ b/volpe-accademy-main/volpe/frontend-development.html
@@ -272,6 +272,14 @@
 							</div>
 							</div>
 						</section>
+						<!-- Add this just before the closing </main> tag -->
+<div class="contact-cta-section" style="padding: 3rem 1.5rem; text-align: center; background: linear-gradient(135deg, #f8fafc 0%, #f1f5f9 100%);">
+    <div class="container" style="max-width: 1000px; margin: 0 auto;">
+        <h3 style="font-size: 1.75rem; margin-bottom: 1.5rem; color: var(--text-dark);">Ready to Start Your Frontend Development Journey?</h3>
+        <p style="max-width: 700px; margin: 0 auto 2rem; line-height: 1.7; color: var(--text-light);">Get in touch with us to learn more about our Frontend Development Program and how we can help you launch your tech career.</p>
+        <a href="index.html#contact" class="cta-button" style="display: inline-block; background: linear-gradient(135deg, var(--primary-color) 0%, #3b82f6 100%); color: white; padding: 1rem 2.5rem; border-radius: 12px; font-weight: 600; text-decoration: none; transition: all 0.3s ease; box-shadow: 0 4px 15px rgba(37, 99, 235, 0.3);">Contact Us</a>
+    </div>
+</div>
 	</main>
 
 	<script src="scripts.js"></script>
