--- a/volpe-accademy-main/volpe/hrprograms.html
+++ b/volpe-accademy-main/volpe/hrprograms.html
@@ -159,7 +159,7 @@
                                 <li class="course-item">Advanced Recruitment Strategy</li>
                                 <li class="course-item">Conflict Resolution & Employee Relations</li>
                                 <li class="course-item">KPI/KRA Setting & Implementation</li>
-                                <li class="course-item">Talent Management</li>
+                                <li class="course-item">Talent Management/Attrition Management</li>
                                 <li class="course-item">Compensation Benchmarking</li>
                                 <li class="course-item">HR Budgeting</li>
                                 <li class="course-item">Leadership Skills for HR Managers</li>
@@ -196,11 +196,10 @@
                                 <li class="course-item">Strategic Workforce Planning</li>
                                 <li class="course-item">Talent Retention & Succession</li>
                                 <li class="course-item">Global HR Regulations & Cross-Country Practices</li>
-                                <li class="course-item">Employee Value Proposition (EVP) Development</li>
                                 <li class="course-item">Advanced HR Analytics & Predictive Modelling</li>
                                 <li class="course-item">Change Management Frameworks</li>
                                 <li class="course-item">Employee Experience (EX) Design</li>
-                                <li class="course-item">Executive Coaching</li>
+                                <li class="course-item">Grrevance Management</li>
                                 <li class="course-item">HR Risk, Governance & Compliance</li>
                                 <li class="course-item">Organizational Behaviour & Culture Strategy</li>
                             </ul>
