--- a/volpe-accademy-main/volpe/index.html
+++ b/volpe-accademy-main/volpe/index.html
@@ -83,7 +83,7 @@
                             </div>
                             <div class="feature-item">
                                 <div class="feature-icon">✓</div>
-                                <span class="feature-text">Real-World Projects</span>
+                                <span class="feature-text">Live-Corporate Projects</span>
                             </div>
                             <div class="feature-item">
                                 <div class="feature-icon">✓</div>
@@ -440,7 +440,7 @@
                         </div>
                         <h4 class="workshop-title">HR Business Partner</h4>
                         <div class="workshop-price-wrapper">
-                            <span class="workshop-price">₹15,000</span>
+                            <span class="workshop-price">₹12,000</span>
                         </div>
                         <p class="workshop-tagline">"The link between people and business success."</p>
                     </div>
@@ -467,7 +467,7 @@
                         <p class="workshop-tagline">"Lead culture. Influence performance."</p>
                     </div>
 
-                    <div class="workshop-card">
+                    <!-- <div class="workshop-card">
                         <div class="workshop-icon-wrapper">
                             <span class="workshop-icon">⭐</span>
                         </div>
@@ -476,7 +476,7 @@
                             <span class="workshop-price">₹30,000</span>
                         </div>
                         <p class="workshop-tagline">"High-level HR leadership for tomorrow's leaders."</p>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
