--- a/volpe-accademy-main/volpe/hrprograms.html
+++ b/volpe-accademy-main/volpe/hrprograms.html
@@ -199,7 +199,7 @@
                                 <li class="course-item">Advanced HR Analytics & Predictive Modelling</li>
                                 <li class="course-item">Change Management Frameworks</li>
                                 <li class="course-item">Employee Experience (EX) Design</li>
-                                <li class="course-item">Grrevance Management</li>
+                                <li class="course-item">Grievance Management</li>
                                 <li class="course-item">HR Risk, Governance & Compliance</li>
                                 <li class="course-item">Organizational Behaviour & Culture Strategy</li>
                             </ul>
